--- a/03_Notebooks/02_Desarrollo/07_codigoProduccion.ipynb
+++ b/03_Notebooks/02_Desarrollo/07_codigoProduccion.ipynb
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "39e901fc",
    "metadata": {},
    "outputs": [],
@@ -587,7 +587,7 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "#Cargar los datos\n",
-    "ruta_proyecto = 'C:/Users/isaac/Google Drive/DS4B/CursoMachineLearningPython/03_MACHINE_LEARNING/08_CASOS/02_RETAIL/'\n",
+    "ruta_proyecto = 'C:/Users/User/Desktop/DS4B/03_MACHINE_LEARNING/08_CASOS/retail'\n",
     "nombre_fichero_datos = 'trabajo.csv'\n",
     "ruta_completa = ruta_proyecto + '/02_Datos/03_Trabajo/' + nombre_fichero_datos\n",
     "df = pd.read_csv(ruta_completa,sep=',',parse_dates=['date'],index_col='date')\n",
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "9f22b787",
    "metadata": {},
    "outputs": [
@@ -854,7 +854,7 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "#Cargar los datos\n",
-    "ruta_proyecto = 'C:/Users/isaac/Google Drive/DS4B/CursoMachineLearningPython/03_MACHINE_LEARNING/08_CASOS/02_RETAIL/'\n",
+    "ruta_proyecto = 'C:/Users/User/Desktop/DS4B/03_MACHINE_LEARNING/08_CASOS/retail'\n",
     "nombre_fichero_datos = 'validacion.csv'\n",
     "ruta_completa = ruta_proyecto + '/02_Datos/02_Validacion/' + nombre_fichero_datos\n",
     "df = pd.read_csv(ruta_completa,sep=',',parse_dates=['date'],index_col='date')\n",
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "13384465",
    "metadata": {},
    "outputs": [
@@ -1124,7 +1124,7 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "#Cargar los datos\n",
-    "ruta_proyecto = 'C:/Users/isaac/Google Drive/DS4B/CursoMachineLearningPython/03_MACHINE_LEARNING/08_CASOS/02_RETAIL/'\n",
+    "ruta_proyecto = 'C:/Users/User/Desktop/DS4B/03_MACHINE_LEARNING/08_CASOS/retail'\n",
     "nombre_fichero_datos = 'DatosParaProduccion.csv'\n",
     "ruta_completa = ruta_proyecto + '/02_Datos/02_Validacion/' + nombre_fichero_datos\n",
     "df = pd.read_csv(ruta_completa,sep=';',parse_dates=['date'],index_col='date')\n",
